# sample-todo-rs-20240611

./: .gitignore  Cargo.toml  Makefile.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/.hooks/: initialize.sh  post-create.sh
.devcontainer/workspace/root/: .bashrc.example
migrations/: 20240611133530_init.sql  20240611165310_init.down.sql  20240611165310_init.up.sql
src/: main.rs
src/task/: domain.rs  mod.rs  repo.rs  rest.rs
src/task/rest/: models.rs  router.rs
