[package]
name = "todo-rs-20240611"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = [
	"chrono",
	"migrate",
	"postgres",
	"runtime-tokio",
	"tls-native-tls",
] }
thiserror = "1.0.61"
tokio = "1.28.2"
